--- a/Calzados.html
+++ b/Calzados.html
@@ -6,21 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tienda de nike </title>
     <link rel="stylesheet" href="stylescalzados.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <p class="logo"></p>
-        <ul>       
+        <ul>      
             <li><a href="Calzados.html">Calzado</a><li>
             <li><a href="Niños.html">Niños</a><li>
             <li><a href="mujeres.html">Mujeres</a><li>
-            <li><a href="Hombres.html">Hombres</a><li>  
+            <li><a href="Hombres.html">Hombres</a><li>
+            <li><a href="iniciarsecion.html">Iniciar Sesion</a></li>
         </ul>
     </nav>
-    
     <header>  
         <h1>Calzado Deportivo</h1>
         <div class="container-icon">
@@ -29,168 +26,122 @@
             </svg> 
             <div class="count-products">
                 <span id="contador-productos">1</span>
-            </div>
-            <div class="container-cart-products hidden-cart">
-                <div class="cart-product">
-                    <div class="info-cart-product">
-                        <span class="cantidad-producto-carrito">1</span>
-                        <p class="titulo-producto-carrito">Nike Zoom Mercurial Superfly 9 Academy MG</p>
-                        <span class="precio-producto-carrito">s/419.90
-                        </span>
-                    </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-close">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-                      </svg>
-                </div>
-                <div class="cart-total">
-                    <h3>Total:
-                        <span class="total-pagar">s/419.90</span>
-                    </h3>
-                </div>
-            </div>  
         </div>
     </header>   
         <div class="container-items">
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw18614ca8/images/hi-res/197593794611_1_20240522120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw18614ca8/images/hi-res/197593794611_1_20240522120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Nike Zoom Mercurial Superfly 9 Academy MG</h2>
-                    <p class="precio">s/419.90</p>
+                    <p class="precio">S/419.90</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwf20b0160/images/hi-res/196608039075_1_20240207120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwf20b0160/images/hi-res/196608039075_1_20240207120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Nike Zoom Mercurial Superfly 9 Academy TF</h2>
-                    <p class="precio">s/343.92</p>
+                    <p class="precio">S/343.92</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwb9542987/images/hi-res/196969302849_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw77142ebc/images/hi-res/197593832344_1_20240605120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
-                    <h2>Air Jordan XXXVIII
-                    </h2>
-                    <p class="precio">s/539.94</p>
+                    <h2>Nike Tiempo Emerald Legend 10 Academy</h2>
+                    <p class="precio">S/ 379.90</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwd9fd0e1c/images/hi-res/197593746658_1_20240522120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwd9fd0e1c/images/hi-res/197593746658_1_20240522120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Nike Phantom GX 2 Elite
                     </h2>
-                    <p class="precio">s/1,099.90</p>
+                    <p class="precio">S/1,099.90</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw17ffd541/images/hi-res/196608057987_1_20240222120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw17ffd541/images/hi-res/196608057987_1_20240222120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2> Nike Tiempo Legend 10 Academy</h2>
-                    <p class="precio">s/330</p>
+                    <p class="precio">S/330</p>
                     <button>Añadir al carrito</button>
-                </div>
+                </div> 
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw8f30abf1/images/hi-res/196975391769_1_20240201120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw8f30abf1/images/hi-res/196975391769_1_20240201120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Nike Phantom GX 2 Academy</h2>
-                    <p class="precio">s/379.90</p>
+                    <p class="precio">S/379.90</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwee73e403/images/hi-res/196604441513_2_20240201120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwee73e403/images/hi-res/196604441513_2_20240201120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Nike Winflo 10
                     </h2>
-                    <p class="precio">s/281.94</p>
+                    <p class="precio">S/281.94</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw2c8bef99/images/hi-res/196969025403_1_20240207120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw2c8bef99/images/hi-res/196969025403_1_20240207120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Nike Tiempo Legend 10 Academy
                     </h2>
-                    <p class="precio">s/258.93</p>
+                    <p class="precio">S/258.93</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa5779b5c/images/hi-res/197593996800_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa5779b5c/images/hi-res/197593996800_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>LeBron XXI Conchiolin
                     </h2>
-                    <p class="precio">s/809.91</p>
+                    <p class="precio">S/809.91</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwbe7fc2fa/images/hi-res/196968212323_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwbe7fc2fa/images/hi-res/196968212323_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Nike Free RN NN
                     </h2>
-                    <p class="precio">s/269.94</p>
+                    <p class="precio">S/269.94</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw12e85e42/images/hi-res/196969177010_1_20240131120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw12e85e42/images/hi-res/196969177010_1_20240131120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Nike Flex Experience Run 11
                     </h2>
-                    <p class="precio">s/179.94</p>
+                    <p class="precio">S/179.94</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw10536fee/images/hi-res/195869167671_1_20240131120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw10536fee/images/hi-res/195869167671_1_20240131120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 </figure>
                 <div class="infoproduct">
                     <h2>Nike Downshifter 12
                     </h2>
-                    <p class="precio">s/159.92</p>
+                    <p class="precio">S/159.92</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwf0ad8d16/images/hi-res/196969191887_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwf0ad8d16/images/hi-res/196969191887_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 </figure>
                 <div class="infoproduct">
                     <h2>Nike Vomero 17</h2>
-                    <p class="precio">s/489.93</p>
+                    <p class="precio">S/489.93</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
         </div>
-        
-        <script src="index.js"></script>
 </body>
 </html>
