--- a/Index/index.html
+++ b/Index/index.html
@@ -16,10 +16,10 @@
         <nav>
             <p class="logo">NIKE</p>
             <ul>       
-                <li><a href="Calzados.html">Calzado</a><li>
-                <li><a href="Niños.html">Niños</a><li>
-                <li><a href="mujeres.html">Mujeres</a><li>
-                <li><a href="Hombres.html">Hombres</a><li>  
+                <li><a href="/Calzado/Calzados.html">Calzado</a><li>
+                <li><a href="/Niños/niños.html">Niños</a><li>
+                <li><a href="/Mujeres/mujeres.html">Mujeres</a><li>
+                <li><a href="/Hombres/Hombres.html">Hombres</a><li>  
             </ul>
         </nav>
         <header>
@@ -28,11 +28,10 @@
         <p class="letras">somos una empresa de ropa y zapatillas deportivas mas <br>reconocida 
             en el mundo 
         </p>  
-        <button><a href="iniciarsecion.html">iniciar sesion</a><img src="icons/bxs-right-arrow-alt.svg" alt=""></button>
+        <button><a href="/Inicio de sesion/iniciarsecion.html">iniciar sesion</a><img src="icons/bxs-right-arrow-alt.svg" alt=""></button>
         </header>
         <img class="emp" src="imagenes/ty.png" alt="">
         <img clas="fondo-emp" src="imagenes/images.png"  alt="">
-        
     </div>
 </head>
 </body>
