--- a/Hombres/Hombres.html
+++ b/Hombres/Hombres.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tienda de nike </title>
     <link rel="stylesheet" href="styleshombre.css">
-    <link rel="shorcut icon" href="imagenes/nike.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -37,9 +33,7 @@
     </header>   
         <div class="container-items">
             <div class="item">
-                <figure>
-                    <img src="https://i.ebayimg.com/thumbs/images/g/qAkAAOSwVRxlwNQv/s-l640.jpg" alt="ropa">
-                </figure>
+                <img src="https://i.ebayimg.com/thumbs/images/g/qAkAAOSwVRxlwNQv/s-l640.jpg" alt="ropa">
                 <div class="infoproduct">
                     <h2>Conjunto Chandal</h2>
                     <p class="precio">s/240</p>
@@ -47,9 +41,7 @@
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/rtkeu5gk3juxwfpvncdj/dri-fit-camiseta-deportiva-rMXj0g.png" alt="ropa">
-                </figure>
+                <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/rtkeu5gk3juxwfpvncdj/dri-fit-camiseta-deportiva-rMXj0g.png" alt="ropa">
                 <div class="infoproduct">
                     <h2>Camiseta Deportiva</h2>
                     <p class="precio">s/120</p>
@@ -57,9 +49,7 @@
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/b58d49b0-c988-44f0-a80c-62eae18dee9e/academy-pantalon-de-futbol-dri-fit-p4vsqF.png" alt="ropa">
-                </figure>
+                <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/b58d49b0-c988-44f0-a80c-62eae18dee9e/academy-pantalon-de-futbol-dri-fit-p4vsqF.png" alt="ropa">
                 <div class="infoproduct">
                     <h2>Pantalon de Futbol</h2>
                     <p class="precio">s/160</p>
@@ -67,9 +57,7 @@
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwc9bb7d05/images/hi-res/196968052783_1_20231201120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwc9bb7d05/images/hi-res/196968052783_1_20231201120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Camiseta Alianza lima</h2>
                     <p class="precio">s/250</p>
@@ -77,9 +65,7 @@
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://micasperu.shop/cdn/shop/files/ScreenShot2023-06-21at19.54.24.png?v=1687395273" alt="ropa">
-                </figure>
+                <img src="https://micasperu.shop/cdn/shop/files/ScreenShot2023-06-21at19.54.24.png?v=1687395273" alt="ropa">
                 <div class="infoproduct">
                     <h2> Camiseta FC Barcelona</h2>
                     <p class="precio">s/290</p>
@@ -87,8 +73,7 @@
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw957d3a41/images/hi-res/197594143531_1_20240403-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw957d3a41/images/hi-res/197594143531_1_20240403-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
                 </figure>
                 <div class="infoproduct">
                     <h2>Polo de running Dri-FIT</h2>
@@ -97,8 +82,7 @@
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/4e19b775-aa46-486d-a85c-a232bdcc4944/playera-vers%C3%A1til-de-manga-corta-primary-XK77j1.png" alt="ropa">
+                <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/4e19b775-aa46-486d-a85c-a232bdcc4944/playera-vers%C3%A1til-de-manga-corta-primary-XK77j1.png" alt="ropa">
                 </figure>
                 <div class="infoproduct">
                     <h2>Playera versatil de manga corta</h2>
@@ -107,9 +91,7 @@
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/ce2d1045-42dc-4612-a85b-153668c24f07/shorts-vers%C3%A1tiles-sin-forro-dri-fit-de-13-900-unlimited-nlD0tf.png" alt="ropa">
-                </figure>
+                <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/ce2d1045-42dc-4612-a85b-153668c24f07/shorts-vers%C3%A1tiles-sin-forro-dri-fit-de-13-900-unlimited-nlD0tf.png" alt="ropa">
                 <div class="infoproduct">
                     <h2>Shorts versatiles Dri-FIT</h2>
                     <p class="precio">s/110</p>
@@ -117,9 +99,7 @@
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwf3aec0ff/images/hi-res/193654352769_1_20240125120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwf3aec0ff/images/hi-res/193654352769_1_20240125120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Conjunto de entrenamiento para hombre
                     </h2>
@@ -128,9 +108,7 @@
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa9e81a26/images/hi-res/194494730755_1_20240129120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa9e81a26/images/hi-res/194494730755_1_20240129120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>T-Shirts Manga Corta Urbano Hombre
                     </h2>
@@ -139,9 +117,7 @@
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwab81f361/images/hi-res/196975281152_1_20240327-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwab81f361/images/hi-res/196975281152_1_20240327-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>T-Shirts Manga Corta Running Hombre
                     </h2>
@@ -150,20 +126,15 @@
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa6ee6318/images/hi-res/196607392461_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa6ee6318/images/hi-res/196607392461_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
-                    <h2>Buzos Urbano Hombre
-                    </h2>
-                    <p class="precio">s/230.75</p>
+                    <h2> Buzo Urbano Hombre</h2>
+                    <p class="precio">s/230</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwd6e56bd7/images/hi-res/196607415139_1_20230922120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwd6e56bd7/images/hi-res/196607415139_1_20230922120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Joggers de ajuste slim para hombre
                     </h2>
@@ -171,11 +142,8 @@
                     <button>Añadir al carrito</button>
                 </div>
             </div>
-            
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwbaf41911/images/hi-res/196608718314_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwbaf41911/images/hi-res/196608718314_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Pantalon de Dri-FIT</h2>
                     <p class="precio">s/135</p>
@@ -183,9 +151,7 @@
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa2867db9/images/hi-res/196155007824_1_20240208120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa2867db9/images/hi-res/196155007824_1_20240208120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Polo de Manga Larga</h2>
                     <p class="precio">s/139</p>
@@ -193,9 +159,7 @@
                 </div>
             </div>
             <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw162c8300/images/hi-res/191888621941_1_20240305-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
-                </figure>
+                <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw162c8300/images/hi-res/191888621941_1_20240305-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
                 <div class="infoproduct">
                     <h2>Polo Hombre</h2>
                     <p class="precio">s/99</p>
@@ -203,7 +167,5 @@
                 </div>
             </div>
         </div>
-        
-        <script src="index.js"></script>
 </body>
 </html>
