--- a/Calzado/Calzados.html
+++ b/Calzado/Calzados.html
@@ -11,6 +11,7 @@
     <nav>
         <p class="logo"></p>
         <ul>      
+            <li><a href="/Index/index.html">Inicio</a></li>
             <li><a href="/Calzado/Calzados.html">Calzado</a><li>
             <li><a href="/Niños/niños.html">Niños</a><li>
             <li><a href="/Mujeres/mujeres.html">Mujeres</a><li>
