--- a/Inicio de sesion/iniciarsecion.html
+++ b/Inicio de sesion/iniciarsecion.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="login-box">
-        <img  class="avatar" src="imagenes/nIke-logo.jpg" alt="logo de nike">
+        <img  class="avatar" src="nIke-logo.jpg" alt="logo de nike">
         <h1> login here</h1>
         <form>
             <label for="usarname">Usuario</label>
