--- a/Hombres/Hombres.html
+++ b/Hombres/Hombres.html
@@ -11,12 +11,12 @@
     <nav>
         <p class="logo"></p>
         <ul>       
-            <li><a href="/Index/index.html">Inicio</a></li>
-            <li><a href="/Calzado/Calzados.html">Calzado</a><li>
-            <li><a href="/Niños/niños.html">Niños</a><li>
-            <li><a href="/Mujeres/mujeres.html">Mujeres</a><li>
-            <li><a href="/Hombres/Hombres.html">Hombres</a><li>
-            <li><a href="/Inicio de sesion/iniciarsecion.html">Iniciar Sesion</a></li>
+            <li><a href="../Index/index.html">Inicio</a></li>
+            <li><a href="../Calzado/Calzados.html">Calzado</a><li>
+            <li><a href="../Niños/niños.html">Niños</a><li>
+            <li><a href="../Mujeres/mujeres.html">Mujeres</a><li>
+            <li><a href="../Hombres/Hombres.html">Hombres</a><li>
+            <li><a href="../Inicio de sesion/iniciarsecion.html">Iniciar Sesion</a></li>
         </ul>
     </nav>
     
