--- a/Mujeres/mujeres.html
+++ b/Mujeres/mujeres.html
@@ -14,11 +14,11 @@
             <h1>Mujeres</h1>
             <nav class="navbar">
                 <ul>
-                    <li><a href="/Index/index.html">Inicio</a></li>
-                    <li><a href="/Calzado/Calzados.html">Calzados</a></li>
-                    <li><a href="/Hombres/Hombres.html">Hombres</a></li>
-                    <li><a href="/Mujeres/mujeres.html">Mujeres</a></li>
-                    <li><a href="/Inicio de sesion/iniciarsecion.html">Iniciar Sesion</a></li>
+                    <li><a href="../Index/index.html">Inicio</a></li>
+                    <li><a href="../Calzado/Calzados.html">Calzados</a></li>
+                    <li><a href="../Hombres/Hombres.html">Hombres</a></li>
+                    <li><a href="../Mujeres/mujeres.html">Mujeres</a></li>
+                    <li><a href="../Inicio de sesion/iniciarsecion.html">Iniciar Sesion</a></li>
                 </ul>
             </nav>
         </div>
