--- a/Niños/niños.html
+++ b/Niños/niños.html
@@ -14,11 +14,11 @@
             <h1>Niños</h1>
             <nav class="navbar">
                 <ul>
-                    <li><a href="/Index/index.html">Inicio</a></li>
-                    <li><a href="/Mujeres/mujeres.html">Mujeres</a></li>
-                    <li><a href="/Hombres/Hombres.html">Hombres</a></li>
-                    <li><a href="/Calzado/Calzados.html">Calzado</a></li>
-                    <li><a href="/Inicio de sesion/iniciarsecion.html">Iniciar Sesion</a></li>
+                    <li><a href="../Index/index.html">Inicio</a></li>
+                    <li><a href="../Mujeres/mujeres.html">Mujeres</a></li>
+                    <li><a href="../Hombres/Hombres.html">Hombres</a></li>
+                    <li><a href="../Calzado/Calzados.html">Calzado</a></li>
+                    <li><a href="../Inicio de sesion/iniciarsecion.html">Iniciar Sesion</a></li>
                 </ul>
             </nav>
         </div>
@@ -29,7 +29,7 @@
     <div class="titulo-container">
         <div class="fotos">
             <figure>
-                <img src="/Niños/Imagenes/ima1.jpg" alt="imagen1">
+                <img src="../Niños/Imagenes/ima1.jpg" alt="imagen1">
             </figure>
             <div class="informacion-fotos">
                 <button class="b">Comprar</button>
@@ -37,21 +37,21 @@
             </div>
         </div>
         <div class="fotos">
-            <img src="/Niños/Imagenes/ima2.jpg" alt="imagen1">
+            <img src="../Niños/Imagenes/ima2.jpg" alt="imagen1">
             <div class="informacion-fotos">
                 <button class="b">Comprar</button>
                 <p class="a">Prendas para el invierno</p>
             </div>
         </div>
         <div class="fotos">
-            <img src="/Niños/Imagenes/ima3.jpg" alt="imagen1">
+            <img src="../Niños/Imagenes/ima3.jpg" alt="imagen1">
             <div class="informacion-fotos">
                 <button class="b">Comprar</button>
                 <p class="a">Look para Jugar</p>
             </div>
         </div>
         <div class="fotos">
-            <img src="/Niños/Imagenes/ima4.jpg" alt="imagen1">
+            <img src="../Niños/Imagenes/ima4.jpg" alt="imagen1">
             <div class="informacion-fotos">
                 <button class="b">Comprar</button>
                 <p class="a">Look para Dormir</p>
@@ -64,7 +64,7 @@
     <div class="ventas-container">
         <div class="ventas1">
             <figure>
-                <img src="/Niños/Imagenes/i1.jpg" alt="i1">
+                <img src="../Niños/Imagenes/i1.jpg" alt="i1">
             </figure>
             <div class="informacion-ventas">
                 <h2>Nike Dunk LOB SB</h2>
@@ -74,7 +74,7 @@
         </div>
         <div class="ventas1">
             <figure>
-                <img src="/Niños/Imagenes/i2.jpg" alt="i1">
+                <img src="../Niños/Imagenes/i2.jpg" alt="i1">
             </figure>
             <div class="informacion-ventas">
                 <h2>Nike Dunk LOB SB</h2>
@@ -84,7 +84,7 @@
         </div>
         <div class="ventas1">
             <figure>
-                <img src="/Niños/Imagenes/i3.jpg" alt="i1">
+                <img src="../Niños/Imagenes/i3.jpg" alt="i1">
             </figure>
             <div class="informacion-ventas">
                 <h2>Nike Dunk LOB SB</h2>
